@@ -1,3 +1,10 @@
+2016/06/23:
+A small change in the generated code (both in the code and table back-ends) so
+as to avoid OCaml's warning 41. The warning would arise (when compiling a
+generated parser with OCaml 4.03) because Menhir's exception [Error] has the
+same name as the data constructor [Error] in OCaml's pervasive library.
+(Reported by Bernhard Schommer.)
+
 2016/05/18:
 Anonymous rules now work also when used inside a parameterized rule.
 (This did not work until now.) When an anonymous rule is hoisted out
